# rust-apps

./: README.md
common/: Cargo.toml
common/auth/backend/: Cargo.toml
common/auth/backend/src/: lib.rs
common/auth/frontend/: package.json  tsconfig.json  vite.config.ts
common/auth/frontend/src/: store.ts  types.ts
common/auth/frontend/src/components/: LoginForm.svelte  RegisterForm.svelte
common/gateway/: Cargo.toml
common/gateway/src/: lib.rs  service.rs
common/profile/backend/src/: lib.rs
common/profile/frontend/: package.json  tsconfig.json  vite.config.ts
common/profile/frontend/src/: index.ts  store.ts  types.ts
common/profile/frontend/src/components/: ProfileEditForm.svelte  ProfileView.svelte
invoice-demo/: Cargo.toml
invoice-demo/src/: main.rs
invoice-demo/src/services/: invoice.rs  mod.rs
