[package]
name = "kagi_common"
version = "0.1.0"
edition = "2021"
authors = ["Kagi Team"]
description = "Common components for Kagi applications"

[dependencies]
kagi_node = { path = "../../node" }
kagi_macros = { path = "../../kagi_macros" }
kagi_gateway = { path = "./gateway" }
auth = { path = "./auth" }
profile = { path = "./profile" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
members = [
    "auth",
    "profile",
    "gateway"
] 