[package]
name = "kagi-invoice-demo"
version = "0.1.0"
edition = "2021"
description = "Invoice Demo App using Kagi Node System"

[dependencies]
kagi_node = { path = "../../node" }
kagi_macros = { path = "../../kagi_macros" }
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
decimal = { version = "2.1", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4" 